[gd_scene load_steps=6 format=3 uid="uid://sqhepeqrcryj"]

[ext_resource type="Script" uid="uid://duilbjakwe8j4" path="res://camera_2d.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://diy3qohvpbln1" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://drb4xa57kaxad" path="res://background.png" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://k0es1tfkrjkp" path="res://cursor.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://qil7v8dl20ym" path="res://human.tscn" id="5_lquwl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(720, 450)
script = ExtResource("1_0xm2m")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1440.0
offset_bottom = 900.0
texture = ExtResource("2_h2yge")
expand_mode = 1

[node name="cursor" parent="." instance=ExtResource("4_1bvp3")]
z_index = 99
position = Vector2(720, 450)
scale = Vector2(0.7, 0.7)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Human" parent="." instance=ExtResource("5_lquwl")]
position = Vector2(720, 450)
scale = Vector2(0.5, 0.5)

[node name="change1" type="Button" parent="."]
visible = false
offset_left = 567.0
offset_top = 785.0
offset_right = 631.0
offset_bottom = 816.0
text = "change"

[node name="change2" type="Button" parent="."]
visible = false
offset_left = 698.0
offset_top = 787.0
offset_right = 749.0
offset_bottom = 818.0
text = "move"

[connection signal="fire" from="Camera2D" to="." method="_on_camera_2d_fire"]
[connection signal="focus" from="Camera2D" to="." method="_on_camera_2d_focus"]
[connection signal="focus_off" from="Camera2D" to="." method="_on_camera_2d_focus_off"]
[connection signal="timeout" from="Timer" to="Camera2D" method="end_focus"]
[connection signal="pressed" from="change1" to="." method="_on_change_1_pressed"]
[connection signal="pressed" from="change2" to="." method="_on_change_2_pressed"]
